--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3008,7 +3008,7 @@ select[multiple].input-lg {
   padding: 6px 12px;
   margin-bottom: 0;
   font-size: 14px;
-  font-weight: normal;
+  font-weight: 400;
   line-height: 1.42857143;
   text-align: center;
   white-space: nowrap;
