--- a/css/creative.css
+++ b/css/creative.css
@@ -844,7 +844,7 @@ body {
 
 .parallax-household-goods-2 {
     /* The image used */
-    background-image: url("../img/householdgoods/kid.jpg");
+    background-image: url("../img/householdgoods/windows.jpeg");
     /* Set a specific height */
     height: 500px;
     /* Create the parallax scrolling effect */
@@ -865,7 +865,7 @@ body {
     height: 300px;
     ;
     background-size: cover;
-    background-image: url("../img/householdgoods/kid.jpg");
+    background-image: url("../img/householdgoods/windows.jpeg");
 }
 
 @media screen and (min-width: 769px) {
@@ -876,7 +876,7 @@ body {
 
 .parallax-household-goods-3 {
     /* The image used */
-    background-image: url("../img/householdgoods/highway.jpg");
+    background-image: url("../img/householdgoods/reading.jpeg");
     /* Set a specific height */
     height: 500px;
     /* Create the parallax scrolling effect */
@@ -897,7 +897,7 @@ body {
     height: 300px;
     ;
     background-size: cover;
-    background-image: url("../img/householdgoods/highway.jpg");
+    background-image: url("../img/householdgoods/reading.jpeg");
 }
 
 @media screen and (min-width: 769px) {
